feat(location): wire flutter to authoritative java location master
- Connect Flutter Mobile directly to Java Spring Boot
  /api/v2/locations/* and Neon PostgreSQL locations master
- Remove static fallback lists: citiesByState, operatingStates
- Enforce location-first gate: select State and City before search
- Verified 36 states/UTs, 699 districts, 785 cities, 41 localities
- All 103 backend tests, 170 mobile tests, and typecheck passing